--- a/WacthVideoPlayer WatchKit App/Base.lproj/Interface.storyboard
+++ b/WacthVideoPlayer WatchKit App/Base.lproj/Interface.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="8121.17" systemVersion="14E46" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AgC-eL-Hgc" defaultGlanceController="Sv0-Ai-Zie">
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="8164.2" systemVersion="14E46" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AgC-eL-Hgc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8101.14"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="8066.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8135.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="8083.2"/>
     </dependencies>
     <scenes>
         <!--Interface Controller-->
@@ -10,14 +10,31 @@
             <objects>
                 <controller id="AgC-eL-Hgc" customClass="InterfaceController">
                     <items>
-                        <movie width="1" height="148" alignment="left" id="0mJ-MF-qNx"/>
+                        <picker width="1" height="154" alignment="left" style="sequence" focusStyle="sequence" id="Vvx-oV-Bhd">
+                            <connections>
+                                <action selector="Tocuh:" destination="AgC-eL-Hgc" id="jsQ-BC-EaZ"/>
+                            </connections>
+                        </picker>
                     </items>
+                    <color key="backgroundColor" red="1" green="0.21841827113226364" blue="0.17984425139001048" alpha="1" colorSpace="calibratedRGB"/>
                     <connections>
+                        <outlet property="picker" destination="Vvx-oV-Bhd" id="gdq-FV-wwI"/>
                         <outlet property="player" destination="0mJ-MF-qNx" id="Tfd-0F-uoP"/>
                     </connections>
                 </controller>
             </objects>
-            <point key="canvasLocation" x="164" y="217"/>
+            <point key="canvasLocation" x="164" y="218"/>
+        </scene>
+        <!--PlayerController-->
+        <scene sceneID="bp6-oy-gLf">
+            <objects>
+                <controller identifier="PlayerController" hidesWhenLoading="NO" id="JYA-QG-UeE">
+                    <items>
+                        <movie width="1" height="148" alignment="left" id="0mJ-MF-qNx"/>
+                    </items>
+                </controller>
+            </objects>
+            <point key="canvasLocation" x="338" y="220"/>
         </scene>
         <!--Glance Interface Controller-->
         <scene sceneID="rjY-Ar-IMT">
