--- a/WacthVideoPlayer/Base.lproj/Main.storyboard
+++ b/WacthVideoPlayer/Base.lproj/Main.storyboard
@@ -22,20 +22,25 @@
                                     <segue destination="4b4-xl-mse" kind="embed" identifier="showMovie" id="H4B-eV-DEe"/>
                                 </connections>
                             </containerView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mf1-8H-HVe">
-                                <rect key="frame" x="262" y="285" width="31" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mf1-8H-HVe">
+                                <rect key="frame" x="322" y="285" width="31" height="30"/>
                                 <state key="normal" title="OSX"/>
                                 <connections>
-                                    <action selector="sendContentToOSX:" destination="BYZ-38-t0r" eventType="touchUpInside" id="JKY-Tf-McK"/>
+                                    <action selector="sendContentToOSX:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gq7-BO-olo"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="Mf1-8H-HVe" firstAttribute="top" secondItem="2iL-FQ-lEh" secondAttribute="bottom" constant="31" id="AXd-PS-efJ"/>
                             <constraint firstItem="2iL-FQ-lEh" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="CHK-SF-729"/>
                             <constraint firstItem="2iL-FQ-lEh" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Njn-4s-5Lf"/>
+                            <constraint firstItem="Mf1-8H-HVe" firstAttribute="centerX" secondItem="2iL-FQ-lEh" secondAttribute="centerX" id="wUV-CS-JIg"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="osxBtn" destination="Mf1-8H-HVe" id="QCS-nX-11u"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
